replace Arrauys List with either List.of or Collections.singletonList