@@ -40,13 +40,13 @@ public class EnumerationWithNullTest extends AbstractDTAnalysisTest {
         assertThat(analysis.getGaps()).hasSize(1);
 
         @SuppressWarnings({"unchecked", "rawtypes"})
-        List<Hyperrectangle> gaps = Arrays.asList(new Hyperrectangle(1,
-                                                                     Arrays.asList(Interval.newFromBounds(new Bound("c",
-                                                                                                                    RangeBoundary.CLOSED,
-                                                                                                                    null),
-                                                                                                          new Bound("c",
-                                                                                                                    RangeBoundary.CLOSED,
-                                                                                                                    null)))));
+        List<Hyperrectangle> gaps = List.of(new Hyperrectangle(1,
+                                                               List.of(Interval.newFromBounds(new Bound("c",
+                                                                                                        RangeBoundary.CLOSED,
+                                                                                                        null),
+                                                                                              new Bound("c",
+                                                                                                        RangeBoundary.CLOSED,
+                                                                                                        null)))));
         assertThat(gaps).hasSize(1);
 
         // Assert GAPS
